add jks ssl system to eureka

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,13 @@
 server:
   port: 8761 # Indicate the default PORT where this service will be started
+  ssl:
+    enabled: true
+    key-store: classpath:eureka.jks
+    key-store-password: hpf9$A3FTN
+    trust-store: classpath:eureka.jks
+    trust-store-password: hpf9$A3FTN
+    key-alias: eureka
+
 
 eureka:
   client:
