--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,5 @@
 server:
   port: 8761 # Indicate the default PORT where this service will be started
-  ssl:
-    enabled: true
-    key-store: classpath:myeureka.jks
-    key-store-password: A123456b
-    trust-store-password: A123456b
-    key-alias: eureka
-    key-store-type: PKCS12
-
-
 
 eureka:
   instance:
@@ -16,7 +7,7 @@ eureka:
   client:
     registerWithEureka: false	#telling the server not to register himself in the service registry
     serviceUrl:
-      defaultZone: https://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
     fetchRegistry: false
   server:
     waitTimeInMsWhenSyncEmpty: 0 #wait time for subsequent sync
